Commit de prueba
Descripcion commit de prueba

--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -11,6 +11,9 @@
 		<script type="text/javascript" src="../js/jquery-1.9.0.min.js"></script>
 		<script type="text/javascript">
                     
+					/*
+						comentario de prueba
+					*/
                     function guardarComentario(){
                         if (validaContacto()){
                             $.post('../controlador/contacto.php', 
