--- a/vistas/nosotros.html
+++ b/vistas/nosotros.html
@@ -1,3 +1,7 @@
+<!--:::::::::::::::::::::::::::::::::::::::::::::
+::::::::::::::Ing. Yelitza Arreaza:::::::::::::::
+::::::::::Diplomado en Programación Web::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::-->
 <!DOCTYPE html>
 <html  lang='es'>
 	<head>
@@ -36,7 +40,7 @@
 	<body>		
 		<header>
 			<div>
-				<a href="index.html">
+				<a href="../index.html">
 					<img src="../imagenes/logo-innodite1.png" class="logo-innodite"> 
 				</a>
 			</div>
@@ -125,11 +129,11 @@
 <!--::::::::::::::::::::::::::::::::::INICIO MENÚ::::::::::::::::::::::::::::::::::::::::::-->
 				<nav id="nav">
 					<ul class="thick">
-						<li> <a href="index.html">Inicio</a></li>
-						<li><a href="vistas/servicios.html">Servicios</a></li>
-						<li><a href="vistas/portafolio.html">Portafolio</a></li>
-						<li><a href="vistas/nosotros.html">Nosotros</a></li>					 
-						<li><a href="vistas/contacto.html">Contacto</a></li>
+						<li> <a href="../index.html">Inicio</a></li>
+						<li><a href="servicios.html">Servicios</a></li>
+						<li><a href="portafolio.html">Portafolio</a></li>
+						<li><a href="nosotros.html">Nosotros</a></li>					 
+						<li><a href="contacto.html">Contacto</a></li>
 					</ul>
 				</nav>	
 <!--::::::::::::::::::::::::::::::::::::::FIN MENÚ::::::::::::::::::::::::::::::::::::::::::-->
@@ -174,7 +178,7 @@
 							<li><a href="vistas/contacto.html">Contacto</a></li>
 						</ul>
 					</section>-->
-					<p class="pie">Copyright © 2013 Innovación y Diseño C.A, J-40270256-6</p>
+					<p class="pie">Copyright © 2014 Innovación y Diseño C.A, J-40270256-6</p>
 				</section>
 			</footer>
 		   </section> <!--Cierre Sección Contenedor-->
